[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain[google-genai]==0.3.27",
    "langchain-community>=0.3.31",
    "langchain-qdrant>=0.2.1",
    "langfuse>=3.6.2",
    "langgraph>=0.6.10",
    "lark>=1.3.0",
    "llama-index>=0.13.6",
    "llama-index-llms-openai>=0.5.4",
    "markitdown[pdf]>=0.1.3",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "streamlit>=1.50.0",
    "tiktoken>=0.11.0",
    "fastembed>=0.7.3",
    "watchdog>=6.0.0",
]

[dependency-groups]
doc = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.30",
    "pymdown-extensions>=10.8.1",
    "mkdocs-autorefs>=1.0.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocstrings[python]>=0.30.1",
]
